--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </section>
 
     <!-- #endregion -->
-
-<!-- #region section menu -->
+    <!-- #region section menu -->
     <div id="wrapper">
         <div class="overlay"></div>
 
@@ -79,25 +78,23 @@
         <!-- /#page-content-wrapper -->
     </div>
     <!-- /#wrapper -->
-
-<!-- #endregion -->
-
+    <!-- #endregion -->
     <!-- #region section two -->
-<section class="container-fluid section-two">
-    <div class="row">
-        <article class="col-md-12">
-            <h1>
-                LOREM IPSUM
-            </h1>
-            <h4>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
-            </h4>
-        </article>
-    </div>
-</section>
+    <section class="container-fluid section-two">
+        <div class="row">
+            <article class="col-md-12">
+                <h1>
+                    LOREM IPSUM
+                </h1>
+                <h4>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
+                </h4>
+            </article>
+            <img src="assets/images/hero-image-mallorca.jpg" class="col-md-12 hero-image" />
+        </div>
+    </section>
     <!-- #endregion -->
     <!-- #region section three -->
-
     <!-- #endregion -->
 
 
