--- a/index.html
+++ b/index.html
@@ -56,15 +56,8 @@
                         <li><a href="#">One more separated link</a></li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/maridlcrmn">Follow me</a>
-                </li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <!-- /#sidebar-wrapper -->
