--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <section class="container-fluid section-one">
         <div class="row">
             <article class="col-md-12">
-                <h1>
-                    MALLORCA BAR
-                </h1>
+                <h1>MALLORCA BAR</h1>
             </article>
         </div>
     </section>
@@ -23,28 +21,17 @@
     <!-- #endregion -->
     <!-- #region section menu -->
     <div id="wrapper">
-        <div class="overlay"></div>
 
         <!-- Sidebar -->
         <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
             <ul class="nav sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
-                        Brand
-                    </a>
+                    <a href="#">Brand</a>
                 </li>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">Team</a>
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Team</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Works <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
