--- a/index.html
+++ b/index.html
@@ -28,23 +28,12 @@
                 <li class="sidebar-brand">
                     <a href="#">Brand</a>
                 </li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">Team</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Works <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li class="dropdown-header">Dropdown heading</li>
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Forside</a></li>
+                <li><a href="#">Drink kort</a></li>
+                <li><a href="#">Galleri</a></li>
+                <li><a href="#">Begivenheder</a></li>
+                <li><a href="#">Gæstebog</a></li>
+                <li><a href="#">De døde tyre</a></li>
             </ul>
         </nav>
         <!-- /#sidebar-wrapper -->
