Tilføjet navbar logo

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top row" id="sidebar-wrapper" role="navigation">
             <ul class="nav sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">Brand</a>
+                    <a href="index.html"><img src="assets/images/Logo.png" class="col-xs-12" /></a>
                 </li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
