--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link href="assets/css/main.css" rel="stylesheet" />
-    
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 <body>
 
@@ -54,25 +54,34 @@
         <div class="row">
             <article class="col-md-12">
                 <h1>
-                    LOREM IPSUM
+                    Aalborgs Brune Bodega
                 </h1>
-                <h4>
+                <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
-                </h4>
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
+                </p>
             </article>
-            <img src="assets/images/hero-image-mallorca.jpg" class="col-md-12 hero-image" />
+            
         </div>
     </section>
+    <section class="row">
+        <img src="assets/images/hero-image-mallorca.jpg" class="col-md-12 hero-image" />
+    </section>
     <!-- #endregion -->
-    <section class="container-fluid section-two">
+    <section class="container-fluid section-three">
         <div class="row">
             <article class="col-md-12">
                 <h1>
-                    LOREM IPSUM
+                    Masser af spas og løjer
                 </h1>
-                <h4>
+                <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
-                </h4>
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
+                </p>
             </article>
         </div>
     </section>
