--- a/drikkort.html
+++ b/drikkort.html
@@ -1,21 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Mallorca Bar</title>
+    <title>Drik kort - Mallorca Bar</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link href="assets/css/main.css" rel="stylesheet" />
 </head>
-<body>
+<body class="container-fluid">
 
     <!-- #region section one -->
-    <section class="container-fluid section-one">
-        <div class="row">
+    <section class="row section-one">
             <article class="col-md-12">
                 <h1>MALLORCA BAR</h1>
             </article>
-        </div>
     </section>
 
     <!-- #endregion -->
@@ -46,42 +44,104 @@
             </button>
         </div>
         <!-- /#page-content-wrapper -->
-    </div>
-    <!-- /#wrapper -->
+    </div><!-- /#wrapper -->
     <!-- #endregion -->
-    <!-- #region section two -->
-    <section class="container-fluid section-two">
-        <div class="row">
-            <article class="col-md-12">
-                <h1>
-                    LOREM IPSUM
-                </h1>
-                <h4>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
-                </h4>
-            </article>
-            <img src="assets/images/hero-image-mallorca.jpg" class="col-md-12 hero-image" />
-        </div>
-    </section>
-    <!-- #endregion -->
-    <section class="container-fluid section-two">
-        <div class="row">
-            <article class="col-md-12">
-                <h1>
-                    LOREM IPSUM
-                </h1>
-                <h4>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
-                </h4>
-            </article>
-        </div>
-    </section>
 
+    <!-- #region PRISTABEL -->
+
+    <table>
+        <tr><th>ØL - VAND - DIVERSE</th></tr>
+        <tr>
+            <td>Almindelig øl</td>
+            <td>kr. 17,00</td>
+        </tr>
+        <tr>
+            <td>Fadøl, 1/4 ltr.</td>
+            <td>kr. 18,00</td>
+        </tr>
+        <tr>
+            <td>Fadøl, 1/2 ltr.</td>
+            <td>kr. 23,00</td>
+        </tr>
+        <tr>
+            <td>Guldøl</td>
+            <td>kr. 22,00</td>
+        </tr>
+        <tr>
+            <td>Diverse vand</td>
+            <td>kr. 15,00</td>
+        </tr>
+        <tr>
+            <td>Annanas eller Tomat Joice</td>
+            <td>kr. 19,00</td>
+        </tr>
+        <tr>
+            <td>Hawaii juice</td>
+            <td>kr. 21,00</td>
+        </tr>
+        <tr>
+            <td>Lime</td>
+            <td>kr. 6,00</td>
+        </tr>
+        <tr>
+            <td>Cult</td>
+            <td>kr. 27,00</td>
+        </tr>
+        <tr>
+            <td>Fadøl stor</td>
+            <td>kr. 28,00</td>
+        </tr>
+    </table>
+
+    <table>
+        <tr><th>SNAPS & BITTER</th></tr>
+        <tr>
+            <td>Rød Aalborg, 2 cl</td>
+            <td>kr. 17,00</td>
+        </tr>
+        <tr>
+            <td>Blå Aalborg, 2 cl</td>
+            <td>kr. 17,00</td>
+        </tr>
+        <tr>
+            <td>Gammel Dansk, s cl</td>
+            <td>kr. 17,00</td>
+        </tr>
+        <tr>
+            <td>Underberg, 2 cl</td>
+            <td>kr. 22,00</td>
+        </tr>
+        <tr>
+            <td>Nordsøolie, 2 cl</td>
+            <td>kr. 17,00</td>
+        </tr>
+        <tr>
+            <td>Arnbitter, 2 cl	</td>
+            <td>kr. 19,00</td>
+        </tr>
+        <tr>
+            <td>Jægermeister, 2 cl</td>
+            <td>kr. 17,00</td>
+        </tr>
+        <tr>
+            <td>Fernet Branca, 2 cl</td>
+            <td>kr. 17,00</td>
+        </tr>
+        <tr>
+            <td>Fernet Minta, 2 cl</td>
+            <td>kr. 17,00</td>
+        </tr>
+        <tr>
+            <td>Candy Shot, 2 cl</td>
+            <td>kr. 15,00</td>
+        </tr>
+    </table>
+
+    <!-- #endregion -->
 
     <!-- #region footer -->
-    <section class="container-fluid">
-
-        <footer class="row">
+    <section class="row">
+        <footer>
             <ul>
                 <li>Kontakt:</li>
                 <li>Mallorca Bar</li>
