Created the gallery
Created and finished the gallery page

--- a/galleri.html
+++ b/galleri.html
@@ -1,19 +1,21 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Drik kort - Mallorca Bar</title>
+    <title>Galleri | Mallorca Bar</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link href="assets/css/main.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
-<body class="container-fluid">
-
+<body>
     <!-- #region section one -->
-    <section class="row section-one">
-        <article class="col-md-12">
-            <h1>MALLORCA BAR</h1>
-        </article>
+    <section class="container-fluid section-one">
+        <div class="row">
+            <article class="col-md-12">
+                <h1>MALLORCA BAR</h1>
+            </article>
+        </div>
     </section>
 
     <!-- #endregion -->
@@ -47,100 +49,63 @@
     </div>
     <!-- /#wrapper -->
     <!-- #endregion -->
-    <!-- #region PRISTABEL -->
+    <!-- #region gallery -->
 
-    <table>
-        <tr><th>ØL - VAND - DIVERSE</th></tr>
-        <tr>
-            <td>Almindelig øl</td>
-            <td>kr. 17,00</td>
-        </tr>
-        <tr>
-            <td>Fadøl, 1/4 ltr.</td>
-            <td>kr. 18,00</td>
-        </tr>
-        <tr>
-            <td>Fadøl, 1/2 ltr.</td>
-            <td>kr. 23,00</td>
-        </tr>
-        <tr>
-            <td>Guldøl</td>
-            <td>kr. 22,00</td>
-        </tr>
-        <tr>
-            <td>Diverse vand</td>
-            <td>kr. 15,00</td>
-        </tr>
-        <tr>
-            <td>Annanas eller Tomat Joice</td>
-            <td>kr. 19,00</td>
-        </tr>
-        <tr>
-            <td>Hawaii juice</td>
-            <td>kr. 21,00</td>
-        </tr>
-        <tr>
-            <td>Lime</td>
-            <td>kr. 6,00</td>
-        </tr>
-        <tr>
-            <td>Cult</td>
-            <td>kr. 27,00</td>
-        </tr>
-        <tr>
-            <td>Fadøl stor</td>
-            <td>kr. 28,00</td>
-        </tr>
-    </table>
-
-    <table>
-        <tr><th>SNAPS & BITTER</th></tr>
-        <tr>
-            <td>Rød Aalborg, 2 cl</td>
-            <td>kr. 17,00</td>
-        </tr>
-        <tr>
-            <td>Blå Aalborg, 2 cl</td>
-            <td>kr. 17,00</td>
-        </tr>
-        <tr>
-            <td>Gammel Dansk, s cl</td>
-            <td>kr. 17,00</td>
-        </tr>
-        <tr>
-            <td>Underberg, 2 cl</td>
-            <td>kr. 22,00</td>
-        </tr>
-        <tr>
-            <td>Nordsøolie, 2 cl</td>
-            <td>kr. 17,00</td>
-        </tr>
-        <tr>
-            <td>Arnbitter, 2 cl	</td>
-            <td>kr. 19,00</td>
-        </tr>
-        <tr>
-            <td>Jægermeister, 2 cl</td>
-            <td>kr. 17,00</td>
-        </tr>
-        <tr>
-            <td>Fernet Branca, 2 cl</td>
-            <td>kr. 17,00</td>
-        </tr>
-        <tr>
-            <td>Fernet Minta, 2 cl</td>
-            <td>kr. 17,00</td>
-        </tr>
-        <tr>
-            <td>Candy Shot, 2 cl</td>
-            <td>kr. 15,00</td>
-        </tr>
-    </table>
+    <section id="gallery" class="container-fluid">
+        <article>
+            <h3>Hvis du har nogle billeder så send dem til <a href="mailto:mallorcabar@hotmail.com">mallorcabar@hotmail.com</a></h3>
+        </article>
+        <article class="row">
+            <div class="col-md-3">
+                <figure>
+                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                </figure>
+            </div>
+            <div class="col-md-3">
+                <figure>
+                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                </figure>
+            </div>
+            <div class="col-md-3">
+                <figure>
+                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                </figure>
+            </div>
+            <div class="col-md-3">
+                <figure>
+                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                </figure>
+            </div>
+        </article>
+        <article class="row">
+            <div class="col-md-3">
+                <figure>
+                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                </figure>
+            </div>
+            <div class="col-md-3">
+                <figure>
+                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                </figure>
+            </div>
+            <div class="col-md-3">
+                <figure>
+                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                </figure>
+            </div>
+            <div class="col-md-3">
+                <figure>
+                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                </figure>
+            </div>
+        </article>
+    </section>
 
     <!-- #endregion -->
     <!-- #region footer -->
-    <section class="row">
-        <footer>
+    <section class="container-fluid">
+
+        <footer class="row">
             <ul>
                 <li>Kontakt:</li>
                 <li>Mallorca Bar</li>
