--- a/Begivenheder.html
+++ b/Begivenheder.html
@@ -34,7 +34,7 @@
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="drikkort.html">Drink kort</a></li>
                 <li><a href="#">Galleri</a></li>
-                <li><a href="#">Begivenheder</a></li>
+                <li><a href="Begivenheder.html">Begivenheder</a></li>
                 <li><a href="#">Gæstebog</a></li>
                 <li><a href="#">De døde tyre</a></li>
             </ul>
@@ -64,8 +64,121 @@
     </section>
     <!-- #endregion -->
     <!-- #region cards  -->
-    <hr>
     <div class="container">
+        <div class="row">
+            <div class="col-md-12 concert">
+                <h2>
+                    KONCERTER
+                </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail">
+
+                    <img src="http://placehold.it/500x250/EEE">
+                    <div class="caption">
+                        <h4>Thumbnail label</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail">
+
+
+                    <img src="http://placehold.it/500x250/EEE">
+                    <div class="caption">
+                        <h4>Thumbnail label</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/500x250/EEE">
+                    <div class="caption">
+                        <h4>Thumbnail label</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/500x250/EEE">
+                    <div class="caption">
+                        <h4>Thumbnail label</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/500x250/EEE">
+                    <div class="caption">
+                        <h4>Thumbnail label</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/500x250/EEE">
+                    <div class="caption">
+                        <h4>Thumbnail label</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail">
+
+                    <img src="http://placehold.it/500x250/EEE">
+                    <div class="caption">
+                        <h4>Thumbnail label</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-18 col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <img src="http://placehold.it/500x250/EEE">
+                    <div class="caption">
+                        <h4>Thumbnail label</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div><!--/row-->
+    </div><!--/container -->
+    <!-- #endregion -->
+
+    <!-- #region cards  -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 concert">
+                <h2>
+                    BEGIVENHEDER
+                </h2>
+            </div>
+        </div>
         <div class="row">
             <div class="col-xs-18 col-sm-6 col-md-3">
                 <div class="thumbnail">
