--- a/Begivenheder.html
+++ b/Begivenheder.html
@@ -32,7 +32,7 @@
                     <a href="index.html"><img src="assets/images/Logo.png" class="col-xs-12" /></a>
                 </li>
                 <li><a href="index.html">Forside</a></li>
-                <li><a href="drikkort.html">Drink kort</a></li>
+                <li><a href="drinkkort.html">Drink kort</a></li>
                 <li><a href="#">Galleri</a></li>
                 <li><a href="Begivenheder.html">Begivenheder</a></li>
                 <li><a href="#">Gæstebog</a></li>
