--- a/drinkkort.html
+++ b/drinkkort.html
@@ -29,7 +29,7 @@
                 </li>
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="drikkort.html">Drink kort</a></li>
-                <li><a href="#">Galleri</a></li>
+                <li><a href="galleri.html">Galleri</a></li>
                 <li><a href="#">Begivenheder</a></li>
                 <li><a href="#">Gæstebog</a></li>
                 <li><a href="#">De døde tyre</a></li>
