Fikset links igen

--- a/drinkkort.html
+++ b/drinkkort.html
@@ -28,7 +28,7 @@
                     <a href="index.html"><img src="assets/images/Logo.png" class="col-xs-12" /></a>
                 </li>
                 <li><a href="index.html">Forside</a></li>
-                <li><a href="drikkort.html">Drink kort</a></li>
+                <li><a href="drinkkort.html">Drink kort</a></li>
                 <li><a href="galleri.html">Galleri</a></li>
                 <li><a href="#">Begivenheder</a></li>
                 <li><a href="#">Gæstebog</a></li>
