Tilføjet overskrift på drinkkort siden

--- a/drinkkort.html
+++ b/drinkkort.html
@@ -48,7 +48,9 @@
     </div><!-- /#wrapper -->
     <!-- #endregion -->
     <!-- #region PRISTABEL -->
+    <h1>Drinkkort</h1>
     <div class="tables row">
+        
         <table class="col-xs-12 col-sm-2">
             <tr><th>ØL - VAND - DIVERSE</th></tr>
             <tr>
