--- a/drinkkort.html
+++ b/drinkkort.html
@@ -30,9 +30,9 @@
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="drinkkort.html">Drink kort</a></li>
                 <li><a href="galleri.html">Galleri</a></li>
-                <li><a href="#">Begivenheder</a></li>
-                <li><a href="#">Gæstebog</a></li>
-                <li><a href="#">De døde tyre</a></li>
+                <li><a href="Begivenheder.html">Begivenheder</a></li>
+                <li><a href="galleri.html">Gæstebog</a></li>
+                <li><a href="dedødetyre.html">De døde tyre</a></li>
             </ul>
         </nav>
         <!-- /#sidebar-wrapper -->
