--- a/Begivenheder.html
+++ b/Begivenheder.html
@@ -33,10 +33,10 @@
                 </li>
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="drinkkort.html">Drink kort</a></li>
-                <li><a href="#">Galleri</a></li>
+                <li><a href="galleri.html">Galleri</a></li>
                 <li><a href="Begivenheder.html">Begivenheder</a></li>
                 <li><a href="#">Gæstebog</a></li>
-                <li><a href="#">De døde tyre</a></li>
+                <li><a href="dedødetyre.html">De døde tyre</a></li>
             </ul>
         </nav>
         <!-- /#sidebar-wrapper -->
