--- a/dedødetyre.html
+++ b/dedødetyre.html
@@ -30,11 +30,11 @@
                     <a href="index.html"><img src="assets/images/Logo.png" class="col-xs-12" /></a>
                 </li>
                 <li><a href="index.html">Forside</a></li>
-                <li><a href="drikkort.html">Drink kort</a></li>
+                <li><a href="drinkkort.html">Drink kort</a></li>
                 <li><a href="galleri.html">Galleri</a></li>
                 <li><a href="Begivenheder.html">Begivenheder</a></li>
                 <li><a href="#">Gæstebog</a></li>
-                <li><a href="#">De døde tyre</a></li>
+                <li><a href="dedødetyre.html">De døde tyre</a></li>
             </ul>
         </nav>
         <!-- /#sidebar-wrapper -->
