--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="galleri.html">Galleri</a></li>
                 <li><a href="Begivenheder.html">Begivenheder</a></li>
                 <li><a href="#">Gæstebog</a></li>
-                <li><a href="#">De døde tyre</a></li>
+                <li><a href="dedødetyre.html">De døde tyre</a></li>
             </ul>
         </nav>
         <!-- /#sidebar-wrapper -->
