rettelse af stavefejl

--- a/drinkkort.html
+++ b/drinkkort.html
@@ -218,7 +218,7 @@
                 <td>kr. 22,00</td>
             </tr>
             <tr>
-                <td>Cognag, Remy Martin XO, 2 cl</td>
+                <td>Cognac, Remy Martin XO, 2 cl</td>
                 <td>kr. 77,00</td>
             </tr>
         </table>
