--- a/Begivenheder.html
+++ b/Begivenheder.html
@@ -76,10 +76,15 @@
             <div class="col-xs-18 col-sm-6 col-md-3">
                 <div class="thumbnail">
 
-                    <img src="http://placehold.it/500x250/EEE">
+
+                    <img src="assets/images/22.jpg" />
                     <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <h4>FLASHBACK 80TH</h4>
+                        <p>
+                            Flashback 80´tager dig med tilbage til de gode, gamle 80ere i et forrygende sceneshow, hvor du får serveret det ene hit efter det andet.
+                            <br />
+                            Flashback 80´består af 6 konservatorieuddannede musikere fra Aalborg, og du er således i sikre hænder, når bandet tænder op under festen. Bandet optræder i hele landet.
+                        </p>
                         <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
                     </div>
                 </div>
@@ -88,55 +93,15 @@
             <div class="col-xs-18 col-sm-6 col-md-3">
                 <div class="thumbnail">
 
+                    <img src="assets/images/papas-out-late.jpg" />
 
-                    <img src="http://placehold.it/500x250/EEE">
                     <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-18 col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/500x250/EEE">
-                    <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-18 col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/500x250/EEE">
-                    <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-18 col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/500x250/EEE">
-                    <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-18 col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/500x250/EEE">
-                    <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <h4>PAPAS OUT LATE</h4>
+                        <p>
+                            Papa´s Out Late er en professionel, alsidig og super sammenspillet trio med hang til klassisk blues og rock.
+                            <br />
+                            Musikernes håndværk er i orden, og spilleglæden er stor, når Papa´s Out Late får publikum op af stolene med deres råswingende musik, som f.eks. omfatter blues, energisk old school rock´n´roll, eller det mere funky stuff som f.eks. Stevie Ray Vaughan og D-A-D.
+                        </p>
                         <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
                     </div>
                 </div>
@@ -145,10 +110,14 @@
             <div class="col-xs-18 col-sm-6 col-md-3">
                 <div class="thumbnail">
 
-                    <img src="http://placehold.it/500x250/EEE">
+                    <img src="assets/images/Whats-Your-Flavour.jpg" />
                     <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <h4>WHAT'S YOUR FLAVOUR</h4>
+                        <p>
+                            De 4 musikere i What’s Your Flavour leverer et medrivende sceneshow og er altid garant for gode musikalske oplevelser, når de står på scenen. Bandets musikere er uddannet på konservatoriet.
+
+                            Repertoiret er bredt og består af velkendte og iørefaldende sange fra 50’erne frem til idag. What’s Your Flavour tilpasser altid repertoiret hvert enkelt arrangement. Du er dermed sikret en god fest med et fyldt dansegulv.
+                        </p>
                         <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
                     </div>
                 </div>
@@ -156,20 +125,23 @@
 
             <div class="col-xs-18 col-sm-6 col-md-3">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/500x250/EEE">
+
+                    <img src="assets/images/Funky-Monkeys-1.jpeg" />
                     <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                        <h4>FUNKY MONKEYS</h4>
+                        <p>De 5 musikere i Funky Monkeys leverer et højenergisk og gennemmusikalsk show, hvortil ingen kan stå stille. Repertoiret består af en lang række top-danse-hits fra James Brown og Tom Jones til Thomas Helmig og Michael Jackson. En god blanding af pop, soul, disco, 80er, 90er og det sidste nye.</p>
                         <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
                     </div>
                 </div>
             </div>
 
 
-        </div><!--/row-->
-    </div><!--/container -->
+        </div>
+
+
+    </div><!--/row-->
+    <!--/container -->
     <!-- #endregion -->
-
     <!-- #region cards  -->
     <div class="container">
         <div class="row">
@@ -227,56 +199,12 @@
                 </div>
             </div>
 
-            <div class="col-xs-18 col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/500x250/EEE">
-                    <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-xs-18 col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/500x250/EEE">
-                    <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-18 col-sm-6 col-md-3">
-                <div class="thumbnail">
-
-                    <img src="http://placehold.it/500x250/EEE">
-                    <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-18 col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/500x250/EEE">
-                    <div class="caption">
-                        <h4>Thumbnail label</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-                        <a href="#" class="btn btn-default btn-m" role="button">Læs mere</a>
-                    </div>
-                </div>
-            </div>
 
 
         </div><!--/row-->
     </div><!--/container -->
     <!-- #endregion -->
-
     <!-- #region footer -->
     <section class="container-fluid">
 
