--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
                 <h2>
                     Aalborgs Brune Bodega
                 </h2>
-                <p class="col-md-6">
+                <p class="col-md-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
                 </p>
-                <p class="col-md-6">
+                <p class="col-md-4">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
+                </p>
+                <p class="col-md-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
                 </p>
             </article>
@@ -75,14 +78,15 @@
         <div class="row">
             <article class="col-md-12">
                 <h2>
-                    Lorem Ipsum
+                    Aalborgs Brune Bodega
                 </h2>
-                <p class="col-md-6">
-                    Jeg har ingen ide om hvad jeg skal skrive, så jeg smækker bare noget fis ind her. Det skal nok gå helt fantastisk.
-                    <br />
+                <p class="col-md-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
                 </p>
-                <p class="col-md-6">
+                <p class="col-md-4">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
+                </p>
+                <p class="col-md-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rhoncus, eros eget ullamcorper lobortis, justo dui euismod nunc, a ultrices ante dolor nec nulla. Curabitur fermentum sed nisi quis rhoncus. Donec posuere mattis tortor, a efficitur turpis lacinia sed. Donec velit dui, euismod vitae elementum a, pretium vitae mi. Sed rhoncus id augue id lacinia. Curabitur luctus sed neque sed placerat. Curabitur et diam pretium, dapibus risus sed, tincidunt nulla. In eget ornare nulla, vitae scelerisque tortor. Nulla at maximus erat. Proin vel molestie erat, in malesuada velit. Nulla facilisi. Fusce ultricies et magna ac tincidunt. Donec sit amet fringilla libero. Phasellus turpis quam, porttitor eget elit in, aliquet laoreet felis.
                 </p>
             </article>
