--- a/galleri.html
+++ b/galleri.html
@@ -63,29 +63,29 @@
             </div>
             <div class="col-md-3">
                 <figure>
-                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                    <img src="assets/images/galleri/baren.jpg" />
                 </figure>
             </div>
             <div class="col-md-3">
                 <figure>
-                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                    <img src="assets/images/galleri/billard.jpg" />
                 </figure>
             </div>
             <div class="col-md-3">
                 <figure>
-                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                    <img src="assets/images/galleri/indgang.jpg" />
                 </figure>
             </div>
         </article>
         <article class="row">
             <div class="col-md-3">
                 <figure>
-                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                    <img src="assets/images/galleri/Spillemaskiner.jpg" />
                 </figure>
             </div>
             <div class="col-md-3">
                 <figure>
-                    <img src="assets/images/galleri/MM9100-002.jpg" />
+                    <img src="assets/images/galleri/Udenfra.jpeg" />
                 </figure>
             </div>
             <div class="col-md-3">
