Fikset højde på galleri

--- a/galleri.html
+++ b/galleri.html
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-3">
                 <figure>
-                    <img src="assets/images/galleri/Udenfra.jpeg" />
+                    <img src="assets/images/galleri/Udenfra.jpeg" style="height:164px" />
                 </figure>
             </div>
             <div class="col-md-3">
