--- a/dedødetyre.html
+++ b/dedødetyre.html
@@ -83,7 +83,7 @@
                 <td>94</td>
             </tr>
             <tr>
-                <th colspan="3">Supertal</throwspan="3">
+                <th colspan="3">Supertal</th>
             </tr>
             <tr>
                 <td colspan="3">45</td>
