--- a/drinkkort.html
+++ b/drinkkort.html
@@ -227,8 +227,7 @@
     </div>
     <!-- #endregion -->
     <!-- #region footer -->
-    <section class="row">
-        <footer>
+        <footer class="row">
             <ul>
                 <li>Kontakt:</li>
                 <li>Mallorca Bar</li>
@@ -237,7 +236,6 @@
                 <li><a href="tel:98132200">Tlf: 98 13 22 00</a></li>
             </ul>
         </footer>
-    </section>
     <!-- #endregion -->
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
